# Hyperplane_Intersection_Projection

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
PLSPQT_article_code/: Article experiments.ipynb  Graphes.ipynb  README.md  Tutorial.ipynb  _old_projections.py  _projections_with_introspection.py  auto10.py  auto12.py  auto7.py  auto8.py  auto9.py  channels.py  channels.py~  data_generation.py  dual_propre.ipynb  experiment_generation.py  miscellaneous.py  old_ideas.py  projections.py  projections.py~
notebooks/: Tutorial.ipynb
notebooks/tutorial/: sim1.h5  sim10.h5  sim11.h5  sim12.h5  sim13.h5  sim14.h5  sim2.h5  sim3.h5  sim4.h5  sim5.h5  sim7.h5  sim8.h5  sim9.h5
src/qpt_pls/: _old_projections.py  _projections_with_introspection.py  channels.py  data_generation.py  experiment_generation.py  miscellaneous.py  projections.py
