[metadata]
name = qpt-pls
version = 0.1.0
description = Quantum process tomography with projected least-squares
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, process tomography, least squares
license = BSD 3-Clause License
license_file = LICENSE
platforms = Linux, Mac OSX, Unix, Windows

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    pandas
    pytables
    numpy
    scipy
    h5py
    matplotlib

[options.packages.find]
where = src
